Fixed background for light and dark mode.

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,31 +3,10 @@
 @tailwind utilities;
 
 :root {
-  --background: 0 0% 0%;
-  --header-background: 28, 63, 299;
-  --foreground: 0 0% 100%;
-  --card: 0 0% 100%;
-  --card-foreground: 0 0% 0%;
-  --popover: 0 0% 100%;
-  --popover-foreground: 0 0% 0%;
-  --primary: 0, 0, 0;
-  --primary-foreground: 0 0% 0%;
-  --secondary: 0 0% 96%;
-  --secondary-foreground: 0 0% 0%;
-  --muted: 0 0% 96%;
-  --muted-foreground: 0 0% 45%;
-  --accent: 0 0% 96%;
-  --accent-foreground: 0 0% 0%;
-  --destructive: 0 84% 60%;
-  --destructive-foreground: 0 0% 100%;
-  --border: 0 0% 89%;
-  --input: 0 0% 89%;
-  --ring: 47 100% 50%;
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 }
-
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -37,32 +16,11 @@
   }
 }
 
-
 body {
-  @apply bg-gray-100 text-gray-900;
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: rgb(var(--background-start-rgb));
 }
 
-@layer base {
-  body {
-    @apply antialiased;
-  }
-}
-
-.font-inter {
-  font-family: var(--font-inter);
-}
-
-.font-roboto-mono {
-  font-family: var(--font-roboto-mono);
-}
-
-.font-playfair-display {
-  font-family: var(--font-playfair-display);
+.dark body {
+  background: rgb(var(--background-start-rgb));
 }
